--- a/simulador/src/main/resources/unoeste/termo6/simulador/main-view.fxml
+++ b/simulador/src/main/resources/unoeste/termo6/simulador/main-view.fxml
@@ -7,44 +7,60 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="600.0" prefWidth="600.0" spacing="50.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/24.0.1" fx:controller="unoeste.termo6.simulador.MainController">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="40.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/24.0.1" fx:controller="unoeste.termo6.simulador.MainController"
+      style="-fx-background-color: linear-gradient(to bottom, #2c3e50, #34495e);">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+        <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
     </padding>
-   <children>
-      <Label text="Bem Vindo ao Simuladeiro&#10;o simulador de puteiro" textAlignment="CENTER">
-         <font>
-            <Font name="System Bold" size="30.0" />
-         </font>
-      </Label>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
-         <children>
-            <Button mnemonicParsing="false" onAction="#onRegex" text="Espreçao Regular">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" text="Automato">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" text="Gramatica">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Button>
-         </children>
-      </HBox>
-      <Label text="Autores:">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Label>
-      <Label text="- Caua Pereira Domingues&#10;- Joao Paulo Saccomani de Freitas Bortolocce&#10;- Matheus Oliveira da Silva&#10;- Victor Hugo Donaire de Oliveira&#10;" textAlignment="CENTER">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-   </children>
+
+    <children>
+        <!-- Título -->
+        <Label text="🎭 Bem-Vindo ao Simuladeiro" textAlignment="CENTER"
+               style="-fx-text-fill: white;">
+            <font>
+                <Font name="System Bold" size="36.0" />
+            </font>
+        </Label>
+
+        <Label text="O simulador interativo" textAlignment="CENTER"
+               style="-fx-text-fill: #ecf0f1;">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </Label>
+
+        <!-- Botões -->
+        <HBox alignment="CENTER" spacing="40.0">
+            <children>
+                <Button text="Expressão Regular" onAction="#onRegex"
+                        style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-size: 18px; -fx-background-radius: 15; -fx-padding: 10 20; -fx-cursor: hand;">
+                </Button>
+
+                <Button text="Autômato"
+                        style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-size: 18px; -fx-background-radius: 15; -fx-padding: 10 20; -fx-cursor: hand;">
+                </Button>
+
+                <Button text="Gramática"
+                        style="-fx-background-color: #e67e22; -fx-text-fill: white; -fx-font-size: 18px; -fx-background-radius: 15; -fx-padding: 10 20; -fx-cursor: hand;">
+                </Button>
+            </children>
+        </HBox>
+
+        <!-- Autores -->
+        <VBox alignment="CENTER" spacing="10.0">
+            <children>
+                <Label text="Autores:" style="-fx-text-fill: #f1c40f;">
+                    <font>
+                        <Font size="28.0" />
+                    </font>
+                </Label>
+                <Label text="- Caua Pereira Domingues&#10;- João Paulo Saccomani de Freitas Bortolocce&#10;- Matheus Oliveira da Silva&#10;- Victor Hugo Donaire de Oliveira"
+                       textAlignment="CENTER" style="-fx-text-fill: #ecf0f1;">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                </Label>
+            </children>
+        </VBox>
+    </children>
 </VBox>
