--- a/simulador/src/main/resources/unoeste/termo6/simulador/main-view.fxml
+++ b/simulador/src/main/resources/unoeste/termo6/simulador/main-view.fxml
@@ -15,14 +15,14 @@
 
     <children>
         <!-- Título -->
-        <Label text="🎭 Bem-Vindo ao Simuladeiro" textAlignment="CENTER"
+        <Label text="Linguagens Formais e Autômatos" textAlignment="CENTER"
                style="-fx-text-fill: white;">
             <font>
                 <Font name="System Bold" size="36.0" />
             </font>
         </Label>
 
-        <Label text="O simulador interativo" textAlignment="CENTER"
+        <Label text="Simulador interativo" textAlignment="CENTER"
                style="-fx-text-fill: #ecf0f1;">
             <font>
                 <Font size="20.0" />
@@ -54,7 +54,7 @@
                         <Font size="28.0" />
                     </font>
                 </Label>
-                <Label text="- Caua Pereira Domingues&#10;- João Paulo Saccomani de Freitas Bortolocce&#10;- Matheus Oliveira da Silva&#10;- Victor Hugo Donaire de Oliveira"
+                <Label text="- Cauã Pereira Domingues&#10;- João Paulo Saccomani de Freitas Bortolocce&#10;- Matheus Oliveira da Silva&#10;- Victor Hugo Donaire de Oliveira"
                        textAlignment="CENTER" style="-fx-text-fill: #ecf0f1;">
                     <font>
                         <Font size="18.0" />
