--- a/simulador/src/main/resources/unoeste/termo6/simulador/main-view.fxml
+++ b/simulador/src/main/resources/unoeste/termo6/simulador/main-view.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 <VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="40.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/24.0.1" fx:controller="unoeste.termo6.simulador.MainController"
       style="-fx-background-color: linear-gradient(to bottom, #2c3e50, #34495e);">
     <padding>
@@ -36,7 +34,7 @@
                         style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-size: 18px; -fx-background-radius: 15; -fx-padding: 10 20; -fx-cursor: hand;">
                 </Button>
 
-                <Button text="Autômato"
+                <Button text="Autômato" onAction="#onAutomato"
                         style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-size: 18px; -fx-background-radius: 15; -fx-padding: 10 20; -fx-cursor: hand;">
                 </Button>
 
