--- a/simulador/src/main/resources/unoeste/termo6/simulador/regex/regex-view.fxml
+++ b/simulador/src/main/resources/unoeste/termo6/simulador/regex/regex-view.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="500.0" spacing="30.0" style="-fx-background-color: linear-gradient(to bottom, #2c3e50, #34495e); -fx-padding: 30;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unoeste.termo6.simulador.RegexController">
+<VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="500.0" spacing="30.0" style="-fx-background-color: linear-gradient(to bottom, #2c3e50, #34495e); -fx-padding: 30;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unoeste.termo6.simulador.regex.RegexController">
 
     <children>
         <!-- Campo de Expressão Regular -->
@@ -34,9 +30,9 @@
             <children>
                 <Label style="-fx-text-fill: #1abc9c; -fx-font-size: 20px; -fx-font-weight: bold;" text="10 primeiras palavras desta linguagem" />
                 <Label fx:id="lb_palavras" style="-fx-text-fill: #ecf0f1; -fx-font-size: 16px; -fx-font-style: italic;">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font></Label>
+                    <font>
+                        <Font name="System Bold" size="20.0" />
+                    </font></Label>
             </children>
         </VBox>
 
