--- a/simulador/src/main/resources/unoeste/termo6/simulador/automato/automato-view.fxml
+++ b/simulador/src/main/resources/unoeste/termo6/simulador/automato/automato-view.fxml
@@ -21,19 +21,19 @@
                 <ToggleButton fx:id="bt_estado" text="Normal"
                               style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 8; -fx-padding: 8 15; -fx-cursor: hand;
                                      -fx-border-color: transparent; -fx-border-width: 2px; -fx-border-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1);"
-                              onMouseEntered="#onToggleButtonHover" onMouseExited="#onToggleButtonExit" />
+                              onMouseEntered="#onBotaoHover" onMouseExited="#onBotaoSair" />
                 <ToggleButton fx:id="bt_inicial" text="Inicial"
                               style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 8; -fx-padding: 8 15; -fx-cursor: hand;
                                      -fx-border-color: transparent; -fx-border-width: 2px; -fx-border-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1);"
-                              onMouseEntered="#onToggleButtonHover" onMouseExited="#onToggleButtonExit" />
+                              onMouseEntered="#onBotaoHover" onMouseExited="#onBotaoSair" />
                 <ToggleButton fx:id="bt_inicial_final" text="Inicial e Final"
                               style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 8; -fx-padding: 8 15; -fx-cursor: hand;
                                      -fx-border-color: transparent; -fx-border-width: 2px; -fx-border-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1);"
-                              onMouseEntered="#onToggleButtonHover" onMouseExited="#onToggleButtonExit" />
+                              onMouseEntered="#onBotaoHover" onMouseExited="#onBotaoSair" />
                 <ToggleButton fx:id="bt_final" text="Final"
                               style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 8; -fx-padding: 8 15; -fx-cursor: hand;
                                      -fx-border-color: transparent; -fx-border-width: 2px; -fx-border-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1);"
-                              onMouseEntered="#onToggleButtonHover" onMouseExited="#onToggleButtonExit" />
+                              onMouseEntered="#onBotaoHover" onMouseExited="#onBotaoSair" />
 
                 <Separator orientation="VERTICAL" prefHeight="100.0" prefWidth="0.0">
                     <HBox.margin>
@@ -44,7 +44,7 @@
                 <ToggleButton fx:id="bt_ligar" text="Criar Ligação"
                               style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 8; -fx-padding: 8 15; -fx-cursor: hand;
                                      -fx-border-color: transparent; -fx-border-width: 2px; -fx-border-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1);"
-                              onMouseEntered="#onToggleButtonHover" onMouseExited="#onToggleButtonExit" />
+                              onMouseEntered="#onBotaoHover" onMouseExited="#onBotaoSair" />
 
                 <Separator orientation="VERTICAL" prefHeight="100.0" prefWidth="0.0">
                     <HBox.margin>
@@ -52,16 +52,61 @@
                     </HBox.margin>
                 </Separator>
 
-                <ToggleButton text="Criar Ligação" onAction="#onAtivar"
-                              style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 8; -fx-padding: 8 15; -fx-cursor: hand;
+                <Button fx:id="bt_automatico" text="Teste Automático" onAction="#onAutomatico"
+                        style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 8; -fx-padding: 8 15; -fx-cursor: hand;
                                      -fx-border-color: transparent; -fx-border-width: 2px; -fx-border-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1);"
-                              onMouseEntered="#onToggleButtonHover" onMouseExited="#onToggleButtonExit" />
+                        onMouseEntered="#onBotaoHover" onMouseExited="#onBotaoSair" />
+
+                <Button fx:id="bt_manual" text="Teste Manual" onAction="#onPassoPasso"
+                        style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 8; -fx-padding: 8 15; -fx-cursor: hand;
+                                     -fx-border-color: transparent; -fx-border-width: 2px; -fx-border-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1);"
+                        onMouseEntered="#onBotaoHover" onMouseExited="#onBotaoSair" />
+
+                <Button fx:id="bt_proximo" text="Pŕoximo Passo" onAction="#onProximoPasso" disable="true"
+                        style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 8; -fx-padding: 8 15; -fx-cursor: hand;
+                                     -fx-border-color: transparent; -fx-border-width: 2px; -fx-border-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1);"
+                        onMouseEntered="#onBotaoHover" onMouseExited="#onBotaoSair" />
 
                 <Separator orientation="VERTICAL" prefHeight="100.0" prefWidth="0.0">
                     <HBox.margin>
                         <Insets left="10.0" right="10.0" />
                     </HBox.margin>
                 </Separator>
+
+                <Label text="Palavra: " style="-fx-text-fill: #f1c40f; -fx-font-size: 18">
+                    <font>
+                        <Font name="System Bold" size="14.0" />
+                    </font>
+                    <HBox.margin>
+                        <Insets right="10.0" />
+                    </HBox.margin>
+                </Label>
+
+                <TextField fx:id="tf_palavra" layoutX="43.0" layoutY="99.0" prefHeight="30.0" prefWidth="254.0">
+                    <font>
+                        <Font size="14.0" />
+                    </font>
+                </TextField>
+
+                <Label fx:id="lb_resultado" style="-fx-text-fill: #f1c40f; -fx-font-size: 18">
+                    <font>
+                        <Font name="System Bold" size="14.0" />
+                    </font>
+                    <HBox.margin>
+                        <Insets left="10.0" />
+                    </HBox.margin>
+                </Label>
+
+                <Separator orientation="VERTICAL" prefHeight="100.0" prefWidth="0.0">
+                    <HBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                    </HBox.margin>
+                </Separator>
+
+                <Button fx:id="bt_limpar" text="Limpar" onAction="#onLimpar"
+                        style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 8; -fx-padding: 8 15; -fx-cursor: hand;
+               -fx-border-color: transparent; -fx-border-width: 2px; -fx-border-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1);"
+                        onMouseEntered="#onBotaoHover" onMouseExited="#onBotaoSair" />
             </items>
         </ToolBar>
     </top>
