--- a/simulador/src/main/resources/unoeste/termo6/simulador/main-view.fxml
+++ b/simulador/src/main/resources/unoeste/termo6/simulador/main-view.fxml
@@ -38,7 +38,7 @@
                         style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-size: 18px; -fx-background-radius: 15; -fx-padding: 10 20; -fx-cursor: hand;">
                 </Button>
 
-                <Button text="Gramática"
+                <Button text="Gramática" onAction="#onGramatica"
                         style="-fx-background-color: #e67e22; -fx-text-fill: white; -fx-font-size: 18px; -fx-background-radius: 15; -fx-padding: 10 20; -fx-cursor: hand;">
                 </Button>
             </children>
