--- a/simulador/src/main/resources/unoeste/termo6/simulador/gramatica/gramatica-view.fxml
+++ b/simulador/src/main/resources/unoeste/termo6/simulador/gramatica/gramatica-view.fxml
@@ -23,7 +23,7 @@
     <center>
         <ScrollPane fitToWidth="true" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER">
             <content>
-                <VBox fx:id="grammarsContainer" spacing="15.0" style="-fx-background-color: #3C3F41; -fx-background-radius: 8px; -fx-border-color: #555555; -fx-border-radius: 8px;">
+                <VBox fx:id="grammarsContainer" spacing="15.0" style="-fx-background-radius: 8px; -fx-border-radius: 8px;">
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
