--- a/simulador/src/main/resources/unoeste/termo6/simulador/gramatica/gramatica-view.fxml
+++ b/simulador/src/main/resources/unoeste/termo6/simulador/gramatica/gramatica-view.fxml
@@ -3,13 +3,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #2B2B2B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unoeste.termo6.simulador.gramatica.GramaticaController">
+<BorderPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" style="-fx-background-color: #2B2B2B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unoeste.termo6.simulador.gramatica.GramaticaController">
     <top>
         <Label text="Definição da Gramática" textFill="#E0E0E0" BorderPane.alignment="CENTER">
             <font>
@@ -32,10 +35,76 @@
         </ScrollPane>
     </center>
     <bottom>
-        <HBox alignment="CENTER" prefHeight="60.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" prefHeight="100.0" spacing="15.0" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="addVariableButton" mnemonicParsing="false" onAction="#addVariableRule" text="+ Adicionar Variável" />
+                <HBox alignment="CENTER" prefWidth="200.0">
+                    <children>
+                        <Button fx:id="addVariableButton" mnemonicParsing="false" onAction="#addVariableRule" text="+ Adicionar Variável" />
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER" spacing="10.0">
+                    <children>
+                        <TextField fx:id="wordField" promptText="Digite a palavra" />
+                        <Button fx:id="verifyButton" mnemonicParsing="false" onAction="#verifyWord" text="Verificar Palavra" />
+                        <Button fx:id="generateButton" mnemonicParsing="false" onAction="#generateWords" text="Gerar 10 Palavras" />
+                    </children>
+                </HBox>
             </children>
-        </HBox>
+            <padding>
+                <Insets bottom="10.0" />
+            </padding>
+        </VBox>
     </bottom>
+
+    <right>
+        <VBox fx:id="resultsPane" alignment="TOP_CENTER" managed="false" prefWidth="350.0" spacing="10.0" style="-fx-background-color: #3C3F41; -fx-background-radius: 8px;" visible="false" BorderPane.alignment="CENTER">
+            <BorderPane.margin>
+                <Insets bottom="10.0" right="10.0" top="10.0" />
+            </BorderPane.margin>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
+            <children>
+                <Label text="Resultados" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+                </Label>
+
+                <VBox fx:id="verificationResultBox" managed="false" spacing="5.0" visible="false">
+                    <children>
+                        <Separator prefWidth="200.0" />
+                        <Label text="Resultado da Verificação" textFill="#CCCCCC">
+                            <font>
+                                <Font name="System Italic" size="13.0" />
+                            </font>
+                            <VBox.margin>
+                                <Insets top="5.0" />
+                            </VBox.margin>
+                        </Label>
+                        <Label fx:id="resultLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" textAlignment="CENTER" wrapText="true">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Label>
+                    </children>
+                </VBox>
+
+                <VBox fx:id="generationResultBox" managed="false" spacing="5.0" visible="false" VBox.vgrow="ALWAYS">
+                    <children>
+                        <Separator prefWidth="200.0" />
+                        <Label text="Palavras Geradas" textFill="#CCCCCC">
+                            <font>
+                                <Font name="System Italic" size="13.0" />
+                            </font>
+                            <VBox.margin>
+                                <Insets top="5.0" />
+                            </VBox.margin>
+                        </Label>
+                        <ListView fx:id="generatedWordsListView" VBox.vgrow="ALWAYS" />
+                    </children>
+                </VBox>
+            </children>
+        </VBox>
+    </right>
 </BorderPane>
